--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm run publish
+      - run: npm-publish --token=${{secrets.NPM_AUTH_TOKEN}} ./dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
@@ -42,6 +42,6 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm run publish
+      - run: npm-publish --token=${{secrets.GH_AUTH_TOKEN}} ./dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_AUTH_TOKEN}}
