--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -18,20 +18,6 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm-publish --token=${{secrets.NPM_AUTH_TOKEN}} ./dist
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
-
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -42,6 +28,6 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm-publish --token=${{secrets.GH_AUTH_TOKEN}} ./dist
+      - run: npm run publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_AUTH_TOKEN}}
