--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "registry": "https://npm.pkg.github.com",
     "access": "public"
   },
-  "version": "0.3.0",
+  "version": "0.3.1",
   "scripts": {
     "test": "jest",
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "copyfiles -a LICENSE README.md package*.json index.ts dist",
-    "publish": "cd dist && npm publish"
+    "release": "npm publish dist"
   },
   "keywords": [],
   "author": "Getúlio Magela Silva",
@@ -40,6 +40,5 @@
     ],
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
-  },
-  "dependencies": {}
+  }
 }
