--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -43,6 +43,7 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm test
+      - run: cat ~/.npmrc
         
   check-file:
     needs: build
