--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
       - run: | 
-          echo "//npm.pkg.github.com/:_authToken=${{NODE_AUTH_TOKEN}}" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{secrets.GH_AUTH_TOKEN}}" > .npmrc
           echo "@gm50x=registry=https://npm.pkg.github.com" >> .npmrc
       - run: ls -al
       - run: cat .npmrc
