--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -6,16 +6,31 @@ name: Publish NPM Package
 on:
   release:
     types: [created]
+    
+  workflow_dispatch:
 
 jobs:
-  build:
+  generate-npmrc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm ci
+          registry-url: https://npm.pkg.github.com/
+      - run: | 
+          echo "//registry.npmjs.org/:_authToken==${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
+
+  build:
+    needs: [generate-npmrc]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm i
+      - run: npm run build
       - run: npm test
 
   publish-npm:
@@ -28,6 +43,4 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm run publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+      - run: npm run release
