--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -44,4 +44,4 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
-      - run: npm run release
+      - run: npm publish
