--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -35,7 +35,7 @@ jobs:
       - run: npm test
 
   publish-gpr:
-    needs: build
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
