--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -10,19 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  generate-npmrc:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
-      - run: | 
-          echo "//registry.npmjs.org/:_authToken==${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
-
   build:
-    needs: [generate-npmrc]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -42,5 +30,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+      - run: | 
+          echo "//registry.npmjs.org/:_authToken==${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
+          echo "registry=https://registry.npmjs.org/" >> .npmrc
+      - run: npm i
+      - run: npm run build
       - run: npm publish
