--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -30,8 +30,9 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
       - run: | 
           echo "//npm.pkg.github.com/:_authToken=${{secrets.GH_AUTH_TOKEN}}" > .npmrc
           echo "@gm50x=registry=https://npm.pkg.github.com" >> .npmrc
+      - run: npm i
+      - run: npm run build
       - run: npm publish
