--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: | 
-          echo "//registry.npmjs.org/:_authToken==${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
+          echo "//registry.npmjs.org/:_authToken=${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
       - run: npm i
       - run: npm run build
       - run: npm publish
