--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -30,10 +30,13 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: | 
-          echo "//registry.npmjs.org/:_authToken=${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
-          echo "registry=https://registry.npmjs.org" >> .npmrc
       - run: npm i
       - run: npm run build
       - run: cd dist
-      - run: npm publish
+      - run: | 
+          echo "//registry.npmjs.org/:_authToken=${{secrets.NPM_AUTH_TOKEN}}" > .npmrc
+          echo "registry=https://registry.npmjs.org" >> .npmrc
+          echo "always-auth=true" >> .npmrc
+      - run: ls -al
+      - run: cat .npmrc
+#       - run: npm publish
