--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -34,6 +34,8 @@ jobs:
       - run: npm run build
       - run: cd dist
       - run: | 
-          echo "//npm.pkg.github.com/:_authToken=${{secrets.GH_AUTH_TOKEN}}" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
           echo "@gm50x=registry=https://npm.pkg.github.com" >> .npmrc
-      - run: npm publish
+#       - run: npm publish
+        env: 
+          NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
