--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -37,5 +37,7 @@ jobs:
           echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
           echo "@gm50x=registry=https://npm.pkg.github.com" >> .npmrc
 #       - run: npm publish
+      - run: ls -al
+      - run: cat .npmrc
         env: 
           NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
