--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -30,12 +30,10 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-        env: 
-          NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}  
       - run: npm i
       - run: npm run build
       - run: cd dist
       - run: | 
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_AUTH_TOKEN }}" > .npmrc
           echo "registry=https://npm.pkg.github.com" >> .npmrc
       - run: npm publish
