--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -37,6 +37,6 @@ jobs:
       - run: npm i
       - run: npm run build
       - run: cd dist
-      - run: npm publish
+      - run: npm publish --access public
 
       
