--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -30,7 +30,8 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          token: ${{secrets.GH_AUTH_TOKEN}}  
+          token: ${{ secrets.GH_AUTH_TOKEN }}
+          scope: ${{ secrets.PKG_SCOPE }} 
         env: 
           NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }} 
       - run: npm i
