--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-          registry-url: https://npm.pkg.github.com/
+          registry-url: 'https://npm.pkg.github.com/'
           token: ${{ secrets.GH_AUTH_TOKEN }}
           scope: ${{ secrets.PKG_SCOPE }} 
         env: 
