--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -26,11 +26,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2.1.4
         with:
           node-version: 12
           registry-url: 'https://npm.pkg.github.com/'
           token: ${{ secrets.GH_AUTH_TOKEN }}
+          scope: ${{ secrets.PKG_SCOPE }} 
         env: 
           NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }} 
       - run: npm i
