--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
     "type": "git",
     "url": "https://github.com/gm50x/chronus"
   },
-  "version": "0.4.0",
+  "version": "0.4.1",
+  "files": [
+    "LICENSE",
+    "package.json",
+    "**/*.js",
+    "**/*.js.map",
+    "**/*.d.ts"
+  ],
   "scripts": {
     "test": "jest",
     "prebuild": "rimraf dist",
