--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -36,6 +36,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - run: npm i
       - run: npm run build
-      - run: cd dist
-      - run: ls -al
+      - run: cd dist && ls -al
 #       - run: npm publish --access public
