--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -36,7 +36,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
       - run: npm i
       - run: npm run build
-      - run: cd dist
-      - run: npm publish --access public
-
-      
+      - run: cd dist && npm publish --access public
+        
