--- a/.github/workflows/publish-gh-package.yml
+++ b/.github/workflows/publish-gh-package.yml
@@ -36,5 +36,4 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GH_AUTH_TOKEN }} 
       - run: npm i
       - run: npm run build
-      - run: cd dist
-      - run: npm publish --access public
+      - run: cd dist && npm publish --access public
