chore: added keywords to the project

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/gm50x/chronus"
   },
-  "version": "0.5.0",
+  "version": "0.5.1",
   "files": [
     "LICENSE",
     "package.json",
@@ -18,7 +18,12 @@
     "build": "tsc -p tsconfig.build.json",
     "postbuild": "copyfiles -a LICENSE README.md package*.json index.ts dist"
   },
-  "keywords": [],
+  "keywords": [
+    "Date",
+    "Time",
+    "DateTime",
+    "TimeSpan"
+  ],
   "author": "Getúlio Magela Silva",
   "license": "MIT",
   "description": "Chronus is a lightweight Date and Time manipulation library for JavaScript.",
